<resources>
    <string name="app_name">EWL Controller</string>

    <string name="action_settings">Settings</string>
    <string name="action_disconnect">Disconnect</string>

    <string name="action_connect">Connect</string>
    <string name="enter_ip_address">Enter IP Address…</string>

    <string name="general_none">none</string>

    <string name="server_connection">Server: %s</string>

    <string name="category_information">Information</string>

    <string name="client_connection">Connection</string>
    <string name="system_name">System</string>
    <string name="user_name">Username</string>
    <string name="update_data">Get</string>

    <string name="category_actions">Actions</string>

    <string name="screen_preview">Screen Preview</string>
    <string name="file_manager">File Manager</string>
    <string name="console_command">Console Command</string>
    <string name="start_program">Start Program</string>
    <string name="play_audio">Play Audio</string>
</resources>